# DataBucket

./: Cargo.toml  README.md
.github/workflows/: mirror.yml  rust.yml
codegen/: Cargo.toml
codegen/src/: lib.rs
codegen/src/persist_index/: generator.rs  mod.rs
codegen/src/persist_table/: mod.rs  parser.rs
codegen/src/persist_table/generator/: mod.rs  size_measurable.rs  space.rs  space_deserialize.rs  space_serialize.rs
codegen/src/persistable/: mod.rs  parser.rs
codegen/src/persistable/generator/: mod.rs  obj_impl.rs  persistable_impl.rs
codegen/src/size_measure/: generator.rs  mod.rs  parser.rs
codegen/src/size_measure/generator/: enum_.rs  mod.rs  structure.rs
codegen/src/variable_size_measure/: generator.rs  mod.rs  parser.rs
src/: lib.rs  link.rs  space.rs
src/page/: data.rs  data_type.rs  general_header.rs  header.rs  index.rs  iterators.rs  mod.rs  page.rs  rkyv_data.rs  space_info.rs  ty.rs  util.rs
src/page/index/: data_page.rs  mappers.rs  mod.rs  new_page.rs  page.rs  page_cdc_impl.rs  page_for_unsized.rs  page_for_unsized_cdc_impl.rs  table_of_contents_page.rs
src/persistence/: index.rs  mod.rs  table.rs
src/persistence/data/: mod.rs  rkyv_data.rs  types.rs  util.rs
src/util/: mod.rs  persistable.rs  rkyv_data.rs  sized.rs  tree_index.rs
tests/: mod.rs
tests/data/: table.wt
tools/create-data-file/: Cargo.toml
tools/create-data-file/src/: main.rs
tools/dump-data-file/: Cargo.toml
tools/dump-data-file/src/: main.rs
