[package]
name = "data_bucket_derive"
version = "0.2.6"
edition = "2021"
authors = ["Handy-caT"]
license = "MIT"
repository = "https://github.com/pathscale/DataBucket"
description = "DataBucket is container for WorkTable"

[lib]
name = "data_bucket_codegen"
path = "src/lib.rs"
proc-macro = true

[dependencies]
rkyv = { version = "0.7.45" }
syn = { version = "2.0.74", features = ["full"] }
quote = "1.0.36"
proc-macro2 = "1.0.86"
regex = "1.10.6"
convert_case = "0.6.0"

[dev-dependencies]
derive_more = { version = "1.0.0", features = ["from", "error", "display", "into"] }
rkyv = { version = "0.7.45", features = ["uuid"] }
scc = "2.1.16"
lockfree = "0.5.1"